# safe-rider-backend

./: README.md  client.py  collision_detection_model.h5  config.json  main.py  min_max_scaler.pkl  pyproject.toml
