[tool.poetry]
name = "smart-helmet-backend"
version = "0.1.0"
description = ""
authors = ["Savith Panamgama <geethikasavith@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
joblib = "^1.4.2"
tensorflow = "^2.18.0"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
